[package]
name = "nyxstone"
version = "0.1.0"
authors = ["emproof GmbH"]
edition = "2021"
include = [
  "src/*",
  "nyxstone/src/*",
  "nyxstone/include/**/*",
  "Cargo.toml"
]

[dependencies]
anyhow = { version = "1.0.68", default-features = true }
derive_builder = { version = "0.12.0" }
cxx = "1.0.94"

[build-dependencies]
cxx-build = "1.0.94"
anyhow = { version = "1.0.68", default-features = true }

[lib]
path = "src/lib.rs"
