[package]
name = "nyxstone"
version = "0.1.0"
authors = ["emproof B.V. <oss@emproof.com>", "Philipp Koppe <pkoppe@emproof.com>", "Rachid Mzannar <rmzannar@emproof.com>", "Darius Hartlief <dhartlief@emproof.com>"]
edition = "2021"
include = [
  "src/*",
  "nyxstone/src/*",
  "nyxstone/include/**/*",
  "Cargo.toml"
]
repository = "https://github.com/emproof-com/nyxstone"
keywords = ["assemble", "disassemble"]
description = "Bindings for the nyxstone assembler/disassembler"
categories = ["api-bindings", "compilers"]

[dependencies]
anyhow = { version = "1.0.68", default-features = true }
cxx = "1.0.94"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.94"
anyhow = { version = "1.0.68", default-features = true }

[lib]
path = "src/lib.rs"
