[package]
name = "nyxstone"
version = "0.1.4"
authors = ["emproof B.V. <oss@emproof.com>", "Philipp Koppe <pkoppe@emproof.com>", "Rachid Mzannar <rmzannar@emproof.com>", "Darius Hartlief <dhartlief@emproof.com>"]
edition = "2021"
exclude = [
    "examples",
    "tests",
    "rustfmt.toml",
]
repository = "https://github.com/emproof-com/nyxstone"
keywords = ["assembly", "disassembly", "arm", "x86_64", "reverse-engineering"]
description = "Bindings for the nyxstone assembler/disassembler"
categories = ["api-bindings", "compilers"]
license = "MIT"

[dependencies]
anyhow = { version = "1.0.68", default-features = true }
cxx = "1.0.94"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.94"
anyhow = { version = "1.0.68", default-features = true }

[features]
# Linking preference.
# If none of these is selected, it defaults to force static linking to match
# the behaviour before this feature is introduced.
# Prefer dynamic linking to LLVM library if possible.
prefer-dynamic = []
# Force dynamic linking.
force-dynamic = []
# Prefer static linking to LLVM library if possible.
prefer-static = []
# Force static linking
force-static = []

[lib]
path = "src/lib.rs"
